--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-html,
-body {
-    width: 100%;
-    height: 100%;
-
-}
-body {
-    background-color: forestgreen;
-    font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
 /*Custom button*/
 
 .btn-dark {
@@ -54,20 +44,36 @@ body {
 
 #menu-toggle-small.active {
     width: auto;
-/*    right: 0;*/
     -webkit-transition: all .4s ease 0s;
     -moz-transition: all .4s ease 0s;
     -ms-transition: all .4s ease 0s;
     -o-transition: all .4s ease 0s;
-    transition: all .4s ease 0s;
+    transition: all .8s ease 0s;
+}
+
+@media(max-width:768px) {
+    #menu-toggle-small.active {
+    width: 100%;
+    -webkit-transition: all .4s ease 0s;
+    -moz-transition: all .4s ease 0s;
+    -ms-transition: all .4s ease 0s;
+    -o-transition: all .4s ease 0s;
+    transition: all .8s ease 0s;
+}
 }
 
 #menu-toggle {
     z-index: 10000;
     top: 0;
     right: 0;
+    transition: all .4s ease 0s;
 }
 
 .toggle {
-    display: none;
+    opacity: 0;
+    -webkit-transition: all .2s ease 0s;
+    -moz-transition: all .2s ease 0s;
+    -ms-transition: all .2s ease 0s;
+    -o-transition: all .2s ease 0s;
+    transition: all .2s ease 0s;
 }
