--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 }
 
 
-#menu-toggle-small {
+#menu-container {
     width: 78px;
     position: fixed;
     z-index: 10000;
@@ -42,34 +42,34 @@
     transition: all .4s ease 0s
 }
 
-#menu-toggle-small.active {
+#menu-container.active {
     width: auto;
     -webkit-transition: all .4s ease 0s;
     -moz-transition: all .4s ease 0s;
     -ms-transition: all .4s ease 0s;
     -o-transition: all .4s ease 0s;
-    transition: all .8s ease 0s;
+    transition: all .4s ease 0s;
 }
 
 @media(max-width:768px) {
-    #menu-toggle-small.active {
+    #menu-container.active {
     width: 100%;
     -webkit-transition: all .4s ease 0s;
     -moz-transition: all .4s ease 0s;
     -ms-transition: all .4s ease 0s;
     -o-transition: all .4s ease 0s;
-    transition: all .8s ease 0s;
+    transition: all .4s ease 0s;
 }
 }
 
-#menu-toggle {
+#menu-container-toggle {
     z-index: 10000;
     top: 0;
     right: 0;
     transition: all .4s ease 0s;
 }
 
-.toggle {
+.hover-efect {
     opacity: 0;
     -webkit-transition: all .2s ease 0s;
     -moz-transition: all .2s ease 0s;
